Se agrega ruta de hojas de estilos

--- a/home.html
+++ b/home.html
@@ -5,7 +5,7 @@
 	<link rel="icon" type="image/png" href="Imagenes/myLogo8.png">
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" type="text/css" href="estilo.css">
+	<link rel="stylesheet" type="text/css" href="styles.css">
 <script>
 </script>
 </head>
