Se agrega ruta de archivo js

--- a/home.html
+++ b/home.html
@@ -149,6 +149,6 @@ Type write mem or copy running startup to commit the changes.
 		</div>
 	</footer>
 	<script src="https://code.jquery.com/jquery-3.4.0.min.js"></script>
-	<script src="script.js"></script>
+	<script src="/JS/script.js"></script>
 </body>
 </html>
